# view_social

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE_DIAGRAM.md  AUTHENTICATION_IMPLEMENTATION.md  COMMIT_SESSION_SUMMARY.md  COMMIT_STRATEGY.md  Cargo.toml  Dockerfile  ENVIRONMENT_VARIABLES.md  EXECUTIVE_SUMMARY.md  MAIN_REFACTORING_SUMMARY.md  MIGRATION_CHECKLIST.md  MIGRATION_GUIDE.md  Makefile  QUICK_REFERENCE.md  QUICK_SETUP.md  README.md  REFACTORING_COMPARISON.md  REFACTORING_COMPLETE.txt  REFACTORING_SUMMARY.md  TASK_7.3_IMPLEMENTATION_SUMMARY.md  TASK_7.4_IMPLEMENTATION_SUMMARY.md  WEBSOCKET_IMPLEMENTATION.md  commit_all.sh  commit_all_changes.sh  commit_auth_fixes.sh  commit_auth_implementation.sh  commit_changes.sh  commit_import_fixes.sh  commit_notification_service.sh  commit_refactoring.sh  docker-compose.yml  generate_commits.sh  init.sql  test_websocket.sh  validate_env.sh
.kiro/hooks/: figma-code-connect.kiro.hook
.kiro/settings/: mcp.json
.kiro/specs/view-social-mvp/: design.md  requirements.md  tasks.md
.kiro/steering/: design-system.md
benches/: benchmarks.rs
migrations/: 001_init.sql
scripts/: setup-dev.sh
src/: config.rs  lib.rs  main.rs
src/api/: auth_handlers.rs  dto.rs  handlers.rs  message_handlers.rs  middleware.rs  mod.rs  payment_handlers.rs  post_handlers.rs  rate_limit.rs  user_handlers.rs  websocket.rs
src/api/dto/: auth.rs  common.rs  messaging.rs  mod.rs  payment.rs  post.rs  user.rs
src/api/handlers/: auth_handlers.rs  message_handlers.rs  mod.rs  notification_handlers.rs  payment_handlers.rs  post_handlers.rs  user_handlers.rs
src/api/middleware/: auth.rs  cors.rs  logging.rs  mod.rs  rate_limit.rs
src/api/routes/: mod.rs
src/api/routes/v1/: auth.rs  health.rs  home.rs  messages.rs  mod.rs  notifications.rs  payments.rs  posts.rs  users.rs  (+1 more)
src/application/: commands.rs  mod.rs  queries.rs  services.rs  verification.rs
src/domain/: auth.rs  entities.rs  errors.rs  mod.rs  password.rs  repositories.rs  services.rs  value_objects.rs
src/infrastructure/: cache.rs  database.rs  database.rs.backup  email.rs  mod.rs  sms.rs  storage.rs
src/infrastructure/database/: mod.rs  pool.rs
src/server/: config.rs  mod.rs  router.rs  state.rs
tests/: auth_tests.rs  message_endpoints_test.rs  password_tests.rs  post_endpoints_test.rs  wallet_creation_test.rs  websocket_connection_test.rs  websocket_typing_test.proptest-regressions  websocket_typing_test.rs
view_social_app/: README.md  pubspec.yaml
view_social_app/android/app/: build.gradle.kts
view_social_app/ios/Runner/: Info.plist
view_social_app/ios/Runner.xcodeproj/: project.pbxproj
view_social_app/lib/: injection_container.dart  main.dart
view_social_app/linux/: CMakeLists.txt
view_social_app/linux/runner/: my_application.cc
view_social_app/macos/Flutter/: GeneratedPluginRegistrant.swift
view_social_app/macos/Runner.xcodeproj/: project.pbxproj
view_social_app/test/: widget_test.dart
view_social_app/web/: index.html  manifest.json
view_social_app/windows/: CMakeLists.txt
view_social_app/windows/runner/: Runner.rc  main.cpp
(+115 files in other folders)
