[package]
name = "view-social-backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "view_social_backend"
path = "src/lib.rs"

[[bin]]
name = "view-social-backend"
path = "src/main.rs"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.7.4", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
    "rust_decimal"
] }

# Redis
redis = { version = "0.23", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WebSocket
futures = "0.3"

# Authentication
jsonwebtoken = "9"
bcrypt = "0.15"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.33", features = ["serde"] }
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
regex = "1.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment
dotenvy = "0.15"

# Email
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "builder", "tokio1-rustls-tls"] }

# HTTP Client for SMS
reqwest = { version = "0.11", features = ["json"] }

# Random number generation
rand = "0.8"

# Rate limiting
governor = "0.6"
proptest = "1.4"
[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
proptest = "1.4"
